--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,16 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+Teaching
+======
+* Instructor / Teaching Assistant, Department of Economics, University of Washington, since 2017
+   * Computational Finance and Financial Econometrics (Undergraduate)
+   * Introduction to Microeconomics (Undergraduate)
+   * Introduction to Macroeconomics (Undergraduate)
+
+* Teaching Assistant, Foster School of Business, University of Washington, since 2018
+  * Financial Management (Executive MBA)
+  * International Finance (MBA and Executive MBA)
+  * Business Finance / Corporate Finance (Undergraduate)
+  * Statistical Methods / Information Systems (Undergraduate)
